test/src/e2e_vm_tests/test_programs/should_pass/language/associated_const_impl_self_order/src/main.sw
script;

struct Struct { }

impl Struct {
    fn foo(self) -> u32 {
        Self::ID
    }

    const ID: u32 = 1;
}

fn main() -> u32 {
  let s = Struct {};
  s.foo()
}
