test/src/e2e_vm_tests/test_programs/should_fail/insufficient_type_info_struct/src/main.sw
script;

struct S<T> {
}

impl<T> S<T> {
    fn foo(self) -> u64 {
        __size_of::<T>()
    }
}

fn main() -> u64 {
    let s = S {};
    s.foo()
}
